--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <button id="clear">Clear</button>
     <div class="container" id="canvas"></div>
     <script src="scripts.js"></script>
 </body>
