--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <button id="clear">Clear</button>
-    <div class="container" id="canvas"></div>
+    <div class="container">
+        <div class="container" id="canvas"></div>
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
