--- a/index.html
+++ b/index.html
@@ -8,10 +8,27 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <button id="clear">Clear</button>
+    
+    <div class="container">
+        <h1>Etch-a-Sketch</h1>
+    </div>
+
     <div class="container">
         <div class="container" id="canvas"></div>
+        
     </div>
+
+    <div class="container">
+        <button id="clear">Clear</button>
+    </div>
+
+    <div class="container">
+        <input type="range" min="1" max="100" value="32" class="slider" id="myRange">
+    </div>
+    <div class="container">
+        <h3 id="size"></h3>
+    </div>
+
     <script src="scripts.js"></script>
 </body>
 </html>
