Add color selector. Minor bug fixes.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <div class="container">
         <button id="clear">Clear</button>
+        <input type="color" id="color-val" value="#333333">
     </div>
 
     <div class="container">
