--- a/index.html
+++ b/index.html
@@ -1,35 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Etch-a-Sketch</title>
-</head>
-<body>
-    
-    <div class="container">
-        <h1>Etch-a-Sketch</h1>
-    </div>
-
-    <div class="container">
-        <div class="container" id="canvas"></div>
-        
-    </div>
-
-    <div class="container">
-        <button id="clear">Clear</button>
-        <input type="color" id="color-val" value="#333333">
-    </div>
-
-    <div class="container">
-        <input type="range" min="1" max="100" value="32" class="slider" id="myRange">
-    </div>
-    <div class="container">
-        <h3 id="size"></h3>
-    </div>
-
-    <script src="scripts.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+		/>
+		<title>Swiss Grid</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="styles.css" />
+	</head>
+	<body>
+		<header>
+			<h1>Etch-a-Sketch</h1>
+			<span class="meta-label">by Jordan</span>
+		</header>
+		<div class="layout-grid" id="main-container">
+			<div class="canvas-wrapper">
+				<div id="canvas"></div>
+			</div>
+			<div class="controls-bar">
+				<div class="color-group">
+					<div id="color-display"></div>
+					<input type="color" id="color-val" value="#000000" />
+				</div>
+				<div class="slider-group">
+					<div class="slider-label">
+						<span>Density</span>
+						<span id="size-display">16 × 16</span>
+					</div>
+					<input
+						type="range"
+						id="size-slider"
+						min="4"
+						max="64"
+						value="16"
+					/>
+				</div>
+				<button id="clear">Reset</button>
+			</div>
+		</div>
+		<script src="scripts.js"></script>
+	</body>
 </html>
